--- a/.github/workflows/generate-readmes.yml
+++ b/.github/workflows/generate-readmes.yml
@@ -34,8 +34,7 @@ jobs:
           import os
           import urllib.parse
           import yaml
-          import datetime
-
+          
           # --- 配置区域 ---
           REPO_URL = "https://github.com/${{ github.repository }}/blob/main"
           
@@ -47,7 +46,6 @@ jobs:
               "Mobile_Modules": "Android 手机模块 (Mobile Modules)"
           }
 
-          # 忽略的文件
           IGNORE_DIRS = [".git", ".github"]
           IGNORE_FILES = ["README.md", "LICENSE", "release_body.md"]
 
@@ -75,25 +73,55 @@ jobs:
                   with open(file_path, "r", encoding="utf-8") as f:
                       data = yaml.safe_load(f)
                       
-                  # 基础指标提取
                   info = {}
-                  info["mixed_port"] = safe_get(data, ["mixed-port"], "❌")
-                  info["http_port"] = safe_get(data, ["port"], "❌")
+                  
+                  # --- 1. 基础信息 ---
                   info["mode"] = safe_get(data, ["mode"], "Rule")
                   info["ipv6"] = "✅" if str(safe_get(data, ["ipv6"])).lower() == "true" else "🚫"
                   info["allow_lan"] = "✅" if str(safe_get(data, ["allow-lan"])).lower() == "true" else "🚫"
-                  
-                  # 进阶指标
                   info["tun"] = "✅ 开启" if safe_get(data, ["tun", "enable"], False) else "🚫 关闭"
+
+                  # --- 2. 端口信息提取 (新增) ---
+                  # 提取标准端口
+                  info["port_mixed"] = safe_get(data, ["mixed-port"], "-")
+                  info["port_http"] = safe_get(data, ["port"], "-")
+                  info["port_socks"] = safe_get(data, ["socks-port"], "-")
+                  info["port_redir"] = safe_get(data, ["redir-port"], "-")
+                  info["port_tproxy"] = safe_get(data, ["tproxy-port"], "-")
+                  info["port_ctrl"] = safe_get(data, ["external-controller"], "-")
                   
-                  # 数量统计
+                  # 提取 Listeners (多端口监听)
+                  info["listeners_raw"] = []
+                  listeners = data.get("listeners", [])
+                  if listeners:
+                      for l in listeners:
+                          name = l.get("name", "Unknown")
+                          port = l.get("port", "?")
+                          l_type = l.get("type", "mixed")
+                          info["listeners_raw"].append(f"| 👂 {name} | {port} | {l_type} |")
+
+                  # 构建用于显示的端口列表 (Details用)
+                  info["ports_display"] = []
+                  if info["port_mixed"] != "-": info["ports_display"].append(f"| Mixed (混合) | {info['port_mixed']} | HTTP/SOCKS |")
+                  if info["port_http"] != "-": info["ports_display"].append(f"| HTTP | {info['port_http']} | 仅 HTTP |")
+                  if info["port_socks"] != "-": info["ports_display"].append(f"| SOCKS5 | {info['port_socks']} | 仅 SOCKS |")
+                  if info["port_redir"] != "-": info["ports_display"].append(f"| Redirect | {info['port_redir']} | 透明代理 (TCP) |")
+                  if info["port_tproxy"] != "-": info["ports_display"].append(f"| TProxy | {info['port_tproxy']} | 透明代理 (UDP) |")
+                  if info["port_ctrl"] != "-": info["ports_display"].append(f"| Controller | {info['port_ctrl']} | 控制面板 |")
+                  # 合并 Listeners 到显示列表
+                  if info["listeners_raw"]:
+                      for l_str in info["listeners_raw"]:
+                          # 简单处理一下字符串以便放入同一张表，或者单独列出
+                          pass 
+
+                  # --- 3. 统计信息 ---
                   groups = data.get("proxy-groups", [])
                   info["group_count"] = len(groups) if groups else 0
                   
                   rules = data.get("rules", [])
                   info["rule_count"] = len(rules) if rules else 0
                   
-                  # 策略组详情 (用于生成详细报告)
+                  # --- 4. 详情提取 ---
                   info["groups_raw"] = []
                   for pg in groups:
                       name = pg.get("name", "Unknown")
@@ -105,7 +133,6 @@ jobs:
                       elif "select" in type_: icon = "👆"
                       info["groups_raw"].append(f"| {icon} {name} | `{type_}` |")
 
-                  # DNS 详情
                   info["dns_raw"] = []
                   dns = data.get("dns", {})
                   if dns.get("enable", False):
@@ -120,8 +147,7 @@ jobs:
 
           def generate_comparison_table(configs_data):
               """生成横向对比表格"""
-              # 表头
-              headers = ["特性 / 文件", "大小 (Size)"] 
+              headers = ["特性 / 文件", "大小"] 
               for filename in configs_data.keys():
                   headers.append(f"`{filename}`")
               
@@ -129,24 +155,23 @@ jobs:
               lines.append("| " + " | ".join(headers) + " |")
               lines.append("| :--- | :--- " + "| :--- " * len(configs_data) + "|")
               
-              # 定义要对比的行
+              # 对比项：增加了主要端口
               rows = [
-                  ("mixed_port", "混合端口"),
+                  ("port_mixed", "混合端口 (Mixed)"),
+                  ("port_ctrl", "控制面板 (Ctrl)"),
                   ("mode", "运行模式"),
                   ("tun", "TUN 模式"),
-                  ("ipv6", "IPv6"),
-                  ("allow_lan", "允许局域网"),
-                  ("group_count", "策略组数量"),
+                  ("group_count", "策略组数"),
                   ("rule_count", "规则条数"),
               ]
 
-              # 填充第一行：文件大小
+              # 文件大小行
               size_row = ["**文件大小**", "-"]
               for filename, data in configs_data.items():
                   size_row.append(data["file_size"])
               lines.append("| " + " | ".join(size_row) + " |")
 
-              # 填充其他特性行
+              # 其他特性行
               for key, label in rows:
                   row_content = [f"**{label}**", "-"]
                   for filename, data in configs_data.items():
@@ -163,7 +188,6 @@ jobs:
               folder_name = os.path.basename(root_path)
               title = DIR_MAP.get(folder_name, folder_name)
 
-              # 1. 扫描并解析所有 YAML
               configs_data = {} 
               valid_yaml_files = []
               
@@ -171,7 +195,6 @@ jobs:
                   if f.lower().endswith((".yaml", ".yml")) and f not in IGNORE_FILES:
                       full_path = os.path.join(root_path, f)
                       parsed_info = analyze_single_config(full_path)
-                      
                       if parsed_info and (parsed_info["group_count"] > 0 or parsed_info["rule_count"] > 0):
                           configs_data[f] = {
                               "file_size": get_file_size(full_path),
@@ -179,22 +202,21 @@ jobs:
                           }
                           valid_yaml_files.append(f)
 
-              # --- 开始构建 Markdown ---
               content = []
               content.append(f"# 📂 {title}\n")
               
               depth = rel_path.count(os.sep) + 1
               back_link = "../" * depth + "README.md"
               content.append(f"[🔙 返回主页 (Return to Home)]({back_link})\n")
-
               content.append("> 🤖 **自动分析报告** | Auto-generated Report\n")
-              content.append(f"> 本目录包含 **{len(valid_yaml_files)}** 个主要配置文件。\n")
 
+              # --- 模块 1: 对比表格 ---
               if len(configs_data) > 1:
                   content.append("## ⚔️ 配置横向对比 (Comparison)\n")
                   content.append(generate_comparison_table(configs_data))
                   content.append("\n")
               
+              # --- 模块 2: 详细分析 ---
               if configs_data:
                   content.append("## 📄 配置文件详解 (Details)\n")
                   for filename, data in configs_data.items():
@@ -202,22 +224,35 @@ jobs:
                       file_url = f"{REPO_URL}/{urllib.parse.quote(rel_path)}/{urllib.parse.quote(filename)}"
                       
                       content.append(f"### 📝 {filename}")
-                      # --- 修复点：这里加上了引号 ---
-                      content.append(f"- **大小**: {data["file_size"]}") 
+                      content.append(f"- **大小**: {data['file_size']}") 
                       content.append(f"- **链接**: [查看源码]({file_url})")
-                      
+
+                      # --- 新增：网络端口详情表 ---
+                      if info["ports_display"] or info["listeners_raw"]:
+                          content.append(f"\n#### 📶 网络端口配置 (Ports)")
+                          content.append("| 类型 | 端口/地址 | 说明 |")
+                          content.append("| :--- | :--- | :--- |")
+                          content.extend(info["ports_display"])
+                          # 如果有 Listeners，追加显示
+                          if info["listeners_raw"]:
+                              for l in info["listeners_raw"]:
+                                  content.append(l)
+                          content.append("\n")
+
+                      # 策略组折叠块
                       if info["groups_raw"]:
-                          content.append(f"\n<details>")
-                          content.append(f"<summary><b>🔎 点击查看策略组架构 ({info["group_count"]}个)</b></summary>\n")
+                          content.append(f"<details>")
+                          content.append(f"<summary><b>🔎 点击查看策略组架构 ({info['group_count']}个)</b></summary>\n")
                           content.append("| 策略组 (Group) | 类型 (Type) |")
                           content.append("| :--- | :--- |")
                           content.extend(info["groups_raw"][:15])
                           if len(info["groups_raw"]) > 15:
-                              content.append(f"| ... | 还有 {len(info["groups_raw"])-15} 个 |")
+                              content.append(f"| ... | 还有 {len(info['groups_raw'])-15} 个 |")
                           content.append(f"\n</details>\n")
                       
+                      # DNS 折叠块
                       if info["dns_raw"]:
-                          content.append(f"\n<details>")
+                          content.append(f"<details>")
                           content.append(f"<summary><b>🌐 点击查看 DNS 配置</b></summary>\n")
                           content.append("| 类型 | 服务器 |")
                           content.append("| :--- | :--- |")
@@ -240,11 +275,11 @@ jobs:
           print("Starting Comparison README generation...")
           for root, dirs, files in os.walk("."):
               dirs[:] = [d for d in dirs if d not in IGNORE_DIRS]
-              
               rel_path = os.path.relpath(root, ".")
               if rel_path == ".": continue
-
-              if len([f for f in files if f not in IGNORE_FILES]) > 0:
+              
+              # 仅当有YAML文件时生成
+              if len([f for f in files if f not in IGNORE_FILES and f.endswith((".yaml", ".yml"))]) > 0:
                   readme_txt = generate_readme(root, files)
                   with open(os.path.join(root, "README.md"), "w", encoding="utf-8") as f:
                       f.write(readme_txt)
@@ -257,6 +292,6 @@ jobs:
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
           
           git add */**/README.md
-          git commit -m "Docs: Auto-generate config comparison tables" || echo "No changes to commit"
+          git commit -m "Docs: Update README with port details" || echo "No changes to commit"
           
           git push origin HEAD:${{ github.ref_name }}
